--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -4147,7 +4147,9 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4162,6 +4164,37 @@
    ],
    "source": [
     "df_1[\"Date\"][0].weekday()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1[['Open','Close']] = df_1[['Open','Close']].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.8699989318847656"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "difference=df_1['Open']-df_1['Close']\n",
+    "difference.max()\n",
+    "difference.min()"
    ]
   },
   {
